syntax = "proto3";

package hazaelsan.ssh_relay.cookie_server.v1;

import "google/api/field_behavior.proto";
import "proto/v1/cookie.proto";
import "proto/v1/grpc.proto";
import "proto/v1/http.proto";

option java_package = "net.hazael.sshrelay.cookieserver.v1";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;
option go_package = "github.com/hazaelsan/ssh-relay/cookie-server/proto/v1/configpb";

// Configuration settings for the Cookie Server.
message Config {
  // The HTTP configuration settings for the server.
  hazaelsan.ssh_relay.v1.HttpServerOptions server_options = 1;

  // The settings for the origin cookie.
  hazaelsan.ssh_relay.v1.Cookie origin_cookie = 3;

  // gRPC settings for connecting to the gRPC backend.
  hazaelsan.ssh_relay.v1.GrpcOptions grpc_options = 4
      [(google.api.field_behavior) = REQUIRED];

  reserved 5 to max;  // Next ID.

  reserved 2;
  reserved "fallback_relay_host";
}
